--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,3 +4,54 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+:root.theme-light {
+    --font-family: 'Inter-Variable', sans-serif;
+    --second-family: "PressStart2P", sans-serif;
+    --font-weight: 400;
+    --second-weight: 700;
+    --bg-color: #fff;
+    --accent-color: #000;
+    --bg-image: repeating-linear-gradient(#d3d3d3 0 2px, rgb(211 211 211 / 0) 2px 4px),
+    repeating-linear-gradient(90deg, #d3d3d3 0 2px, rgb(211 211 211 / 0) 2px 4px),
+    linear-gradient(#e7e7e7 0.01%, #1a1a1a);
+  }
+  
+@media (prefers-color-scheme: light) {
+  :root {
+    --font-family: 'Inter-Variable', sans-serif;
+    --second-family: "PressStart2P", sans-serif;
+    --font-weight: 400;
+    --second-weight: 700;
+    --bg-color: #fff;
+    --accent-color: #000;
+    --bg-image: repeating-linear-gradient(#d3d3d3 0 2px, rgb(211 211 211 / 0) 2px 4px),
+    repeating-linear-gradient(90deg, #d3d3d3 0 2px, rgb(211 211 211 / 0) 2px 4px),
+    linear-gradient(#e7e7e7 0.01%, #1a1a1a);
+    }
+}
+
+:root.theme-dark {
+    --font-family: 'Inter-Variable', sans-serif;
+    --second-family: "PressStart2P", sans-serif;
+    --font-weight: 465;
+    --second-weight: 785;
+    --bg-color: #000;
+    --accent-color: #00cc14;
+    --bg-image: repeating-linear-gradient(#000 0 2px, rgb(211 211 211 / 0) 2px 4px),
+    repeating-linear-gradient(90deg, #000 0 2px, rgb(211 211 211 / 0) 2px 4px),
+    linear-gradient(#007f0c 0.01%, #004306);
+  }
+  
+@media (prefers-color-scheme: dark) {
+  :root {
+    --font-family: 'Inter-Variable', sans-serif;
+    --second-family: "PressStart2P", sans-serif;
+    --font-weight: 465;
+    --second-weight: 785;
+    --bg-color: #000;
+    --accent-color: #00cc14;
+    --bg-image: repeating-linear-gradient(#000 0 2px, rgb(211 211 211 / 0) 2px 4px),
+    repeating-linear-gradient(90deg, #000 0 2px, rgb(211 211 211 / 0) 2px 4px),
+    linear-gradient(#007f0c 0.01%, #004306);
+    }
+}
