--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,12 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+:root {
+    --font-family: 'Inter-Variable', sans-serif;
+    --second-family: "PressStart2P", sans-serif;
+    --font-weight: 400;
+    --second-weight: 700;
+    --bg-color: #fff;
+    --accent-color: #000;
+    --bg-image: repeating-linear-gradient(#d3d3d3 0 2px, rgb(211 211 211 / 0) 2px 4px),
+    repeating-linear-gradient(90deg, #d3d3d3 0 2px, rgb(211 211 211 / 0) 2px 4px),
+    linear-gradient(#e7e7e7 0.01%, #1a1a1a);
+  }
