--- a/styles/variables.css
+++ b/styles/variables.css
@@ -6,6 +6,10 @@
     --second-weight: 700;
     --bg-color: #fff;
     --accent-color: #000;
+    --stroke-color: var(--bg-color);
+    --text-color: var(--bg-color);
+    --outline-color: var(--accent-color);
+    --fill-color: red;
     --bg-image: repeating-linear-gradient(#d3d3d3 0 2px, rgb(211 211 211 / 0) 2px 4px),
     repeating-linear-gradient(90deg, #d3d3d3 0 2px, rgb(211 211 211 / 0) 2px 4px),
     linear-gradient(#e7e7e7 0.01%, #1a1a1a);
