--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -7,7 +7,7 @@
       format('woff2 supports variations'),
       url(./fonts/Inter-Variable.woff2) format('woff2-variations');
     font-display: swap;
-    font-weight: 400 800;
+    font-weight: 400 465 785 800;
   }
 
   @font-face {
