Первое ревью - исправлено

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,6 +35,8 @@ input {
   color: currentColor;
   font-family: inherit;
   font-size: inherit;
+  padding-inline: 0;
+  padding-block: 0;
 }
 
 ul,
