--- a/styles/animations.css
+++ b/styles/animations.css
@@ -12,3 +12,197 @@
 
 Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
 */
+.theme-menu__button:focus {
+    outline: none;
+    opacity: 0.6;
+    transition: opacity ease 0.3s;
+  }
+  
+  .theme-menu__button::after {
+    content: "";
+    position: absolute;
+    inset-block-end: -2px;
+    inset-inline-start: 0;
+    width: 100%;
+    height: 2px;
+    background-color: currentColor;
+    transition: transform 0.3s ease;
+    transform: scaleX(0);
+    transform-origin: left;
+  }
+  
+  .theme-menu__button:focus-visible::after {
+    transform: scaleX(1);
+  }
+  
+  .theme-menu__button:disabled {
+    pointer-events: none;
+  }
+  
+  .theme-menu__button:disabled,
+  .theme-menu__button:hover {
+    opacity: 0.6;
+    transition: opacity ease 0.3s;
+  }
+
+  .theme-menu__button:hover {
+    cursor: pointer;
+  }
+  
+  .theme-menu__button:disabled::before {
+    content: "▶";
+    font-family: var(--second-family);
+    position: absolute;
+    inset-inline-start: -14px;
+    animation: pointer 0.5s infinite ease-in-out alternate;
+  }
+  
+  @keyframes pointer {
+    0% {
+      inset-inline-start: -14px;
+    }
+  
+    100% {
+      inset-inline-start: -18px;
+    }
+  }
+
+  .button:focus {
+    outline: none;
+    box-shadow: 2px 2px 0 var(--accent-color);
+    transition: box-shadow 0.3s ease;
+  }
+  
+  .button:focus-visible {
+    border: solid 2px var(--accent-color);
+  }
+  
+  .button::after {
+    content: "";
+    position: absolute;
+    inset-block-end: 0;
+    inset-inline-start: 0;
+    width: 100%;
+    height: 100%;
+    background-color: currentColor;
+    transition: transform 0.5s ease-in-out;
+    transform: scaleX(0);
+    transform-origin: left;
+  }
+  
+  .button:hover::after {
+    transform: scaleX(1);
+  }
+
+  .button:hover {
+    cursor: pointer;
+  }
+
+  .card__icon-button:focus-visible {
+    border: solid 2px var(--accent-color);
+    transition: border 0.3s ease; 
+  }
+  
+  .card__icon-button:focus {
+    outline: none;
+    box-shadow: none;
+  }
+
+  /*---------------------СТИЛИ И АНИМАЦИИ SVG-СЕРДЦА------------------------*/
+
+  .like-icon:hover {
+    cursor: pointer;
+  }
+
+.like-icon:hover .core {
+    transition: fill 0.3s ease 0s;
+    fill: var(--outline-color);
+  }
+  
+  .like-icon:not(:hover) .core {
+    transition: fill 0.3s ease 0.03s;
+    fill: transparent;
+  }
+  
+  .like-icon:hover .main-body {
+    transition: fill 0.3s ease 0.05s;
+    fill: var(--outline-color);
+  }
+  
+  .like-icon:not(:hover) .main-body {
+    transition: fill 0.3s ease 0s;
+    fill: transparent;
+  }
+  
+  /*---------------------*/
+  
+  .like-icon:active .core {
+    transition: fill 0.3s ease 0s;
+    fill: var(--fill-color);
+  }
+  
+  .like-icon:active .main-body {
+    transition: fill 0.3s ease 0.05s;
+    fill: var(--fill-color);
+  }
+  
+  /*---------------------*/
+  
+  .like-icon.is-liked .core {
+    transition: fill 0.3s ease 0s;
+    fill: var(--fill-color);
+  }
+  
+  .like-icon.is-liked .main-body {
+    transition: fill 0.3s ease 0.05s;
+    fill: var(--fill-color);
+  }
+  
+  .like-icon.is-liked .contour {
+    transition: fill 0.3s ease 0.06s;
+    fill: var(--fill-color);
+  }
+  
+  /*---------------------*/
+  
+  .like-icon.is-liked .heart {
+    animation: scale 0.3s ease-in 0.1s alternate;
+    transform-origin: 50% 50%;
+  }
+  
+  @keyframes scale {
+    0% {
+      transform: scale(1);
+    }
+  
+    100% {
+      transform: scale(1.5);
+    }
+  }
+  
+  .like-icon.is-liked .sparks {
+    animation: opacitySparks 0.3s ease-in 0.3s alternate;
+  }
+  
+  @keyframes opacitySparks {
+    0% {
+      opacity: 0;
+    }
+  
+    100% {
+      opacity: 1;
+    }
+  }
+  
+  /*---------------------*/
+  
+  .like-icon .contour {
+    transition: fill 0.1s linear;
+    fill: var(--outline-color);
+  }
+  
+  .sparks {
+    opacity: 0;
+  }
+  /*--------------------------------КОНЕЦ------------------------------------*/
+  
