--- a/styles/themes.css
+++ b/styles/themes.css
@@ -11,9 +11,9 @@
     --second-weight: 700;
     --bg-color: #fff;
     --accent-color: #000;
-    --stroke-color: var(--bg-color);
-    --text-color: var(--bg-color);
-    --outline-color: var(--accent-color);
+    --stroke-color: var(--bg-color, #fff);
+    --text-color: var(--bg-color, #fff);
+    --outline-color: var(--accent-color, #000);
     --fill-color: red;
     --bg-image: repeating-linear-gradient(#d3d3d3 0 2px, rgb(211 211 211 / 0) 2px 4px),
     repeating-linear-gradient(90deg, #d3d3d3 0 2px, rgb(211 211 211 / 0) 2px 4px),
@@ -28,9 +28,9 @@
     --second-weight: 700;
     --bg-color: #fff;
     --accent-color: #000;
-    --stroke-color: var(--bg-color);
-    --text-color: var(--bg-color);
-    --outline-color: var(--accent-color);
+    --stroke-color: var(--bg-color, #fff);
+    --text-color: var(--bg-color, #fff);
+    --outline-color: var(--accent-color, #000);
     --fill-color: red;
     --bg-image: repeating-linear-gradient(#d3d3d3 0 2px, rgb(211 211 211 / 0) 2px 4px),
     repeating-linear-gradient(90deg, #d3d3d3 0 2px, rgb(211 211 211 / 0) 2px 4px),
@@ -45,9 +45,9 @@
     --second-weight: 785;
     --bg-color: #000;
     --accent-color: #00cc14;
-    --stroke-color: var(--bg-color);
-    --text-color: var(--accent-color);
-    --outline-color: var(--accent-color);
+    --stroke-color: var(--bg-color, #000);
+    --text-color: var(--accent-color, #00cc14);
+    --outline-color: var(--accent-color, #00cc14);
     --fill-color: red;
     --bg-image: repeating-linear-gradient(#000 0 2px, rgb(211 211 211 / 0) 2px 4px),
     repeating-linear-gradient(90deg, #000 0 2px, rgb(211 211 211 / 0) 2px 4px),
@@ -62,9 +62,9 @@
     --second-weight: 785;
     --bg-color: #000;
     --accent-color: #00cc14;
-    --stroke-color: var(--bg-color);
-    --text-color: var(--accent-color);
-    --outline-color: var(--accent-color);
+    --stroke-color: var(--bg-color, #000);
+    --text-color: var(--accent-color, #00cc14);
+    --outline-color: var(--accent-color, #00cc14);
     --fill-color: red;
     --bg-image: repeating-linear-gradient(#000 0 2px, rgb(211 211 211 / 0) 2px 4px),
     repeating-linear-gradient(90deg, #000 0 2px, rgb(211 211 211 / 0) 2px 4px),
