--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,14 +1,14 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
 :root {
     --font-family: 'Inter-Variable', sans-serif;
-    --second-family: "PressStart2P", sans-serif;
+    --second-family: "PressStart2P", fantasy;
     --font-weight: 400;
     --second-weight: 700;
     --bg-color: #fff;
     --accent-color: #000;
-    --stroke-color: var(--bg-color);
-    --text-color: var(--bg-color);
-    --outline-color: var(--accent-color);
+    --stroke-color: var(--bg-color, #fff);
+    --text-color: var(--bg-color, #fff);
+    --outline-color: var(--accent-color, #000);
     --fill-color: red;
     --bg-image: repeating-linear-gradient(#d3d3d3 0 2px, rgb(211 211 211 / 0) 2px 4px),
     repeating-linear-gradient(90deg, #d3d3d3 0 2px, rgb(211 211 211 / 0) 2px 4px),
